Add lottie animation

--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"lottie-react-native": "^1.1.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.1",
-		"react-native-interactable": "^0.0.7"
+		"react-native-elements": "^0.10.3",
+		"react-native-interactable": "^0.0.7",
+		"react-native-vector-icons": "^4.0.1",
+		"react-navigation": "^1.0.0-beta.7"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
